<resources>
    <string name="g_label_share">share</string>
    <string name="g_label_app_name">Gifteng</string>
    <string name="g_label_continue">CONTINUE</string>
    <string name="g_label_use_gifteng_for">What will you use Gifteng for?</string>
    <string name="g_label_giving">Giving</string>
    <string name="g_label_receiving">Receiving</string>
    <string name="g_label_confirm_req">CONFIRM REQUEST</string>
    <string name="g_label_verify_invitation">VERIFY INVITATION</string>
    <string name="g_label_password">Password</string>
    <string name="g_label_forgot_password">Forgot Password</string>
    <string name="g_label_remember">Remember me</string>
    <string name="g_label_login">LOG IN</string>
    <string name="g_label_reset_password">RESET PASSWORD</string>
    <string name="g_label_request_invitation">REQUEST AN INVITATION</string>
    <string name="g_label_have_invitation">I have an invitation</string>
    <string name="g_label_invitation">Invitation</string>
    <string name="g_label_log_in">Log in</string>
    <string name="g_label_join">JOIN</string>
    <string name="g_label_postlisting_notes">Notes</string>
    <string name="g_label_postlisting_details">Details</string>
    <string name="g_label_postlisting_next">Next</string>
    <string name="g_label_free_shipping">Free Shipping</string>
    <string name="g_label_pick_up">Pick Up</string>
    <string name="g_label_edit">Edit</string>
    <string name="g_label_save">Save</string>
    <string name="g_label_basic_info">Personal Info :</string>
    <string name="g_label_contact_info">Contact Info :</string>
    <string name="g_label_male">Male</string>
    <string name="g_label_female">Female</string>
    <string name="g_label_gender">Gender :</string>
    <string name="g_label_change_picture">Change Picture</string>
    <string name="g_label_change_password">Change Password</string>
    <string name="g_label_days"> days</string>
    <string name="g_label_following">Following</string>
    <string name="g_label_followers">Followers</string>
    <string name="g_label_reviews">Reviews</string>
    <string name="g_label_review_by">Review by</string>
    <string name="g_label_cancel_request">CANCEL REQUEST</string>
    <string name="g_label_choose_email">Choose an Email client</string>
    <string name="g_label_unfollow">Unfollow</string>
    <string name="g_label_mark_received">MARK RECEIVED</string>
    <string name="g_label_leave_review">LEAVE REVIEW</string>
    <string name="g_label_send_msg">SEND MESSAGE</string>
    <string name="g_label_like">Like</string>
    <string name="g_label_dislike">Dislike</string>
    <string name="g_label_from_members">Gift from Members</string>
	<string name="g_label_from_business">FROM BUSINESSES</string>
    <string name="g_label_save_settings">Save Settings</string>
	<string name="g_label_miles">mi</string>
	<string name="g_label_requerst_gift">Request Gift</string>
	<string name="g_label_expiars">Expires:</string>
	<string name="g_label_from_member">FROM MEMBERS</string>
	<string name="g_label_mark_gifted">MARK GIFTED</string>
	<string name="g_label_delete">DELETE</string>
    <string name="g_hint_enter_email_phone">Email Address or Phone #</string>
    <string name="g_hint_zip">Your Zip Code</string>
    <string name="g_hint_how_know_us">How did you here out about us?</string>
    <string name="g_hint_invitation_code">Enter Your Invitation Code</string>
    <string name="g_hint_new_password">New Password</string>
    <string name="g_hint_conf_password">Confirm Password</string>
    <string name="g_hint_password">Password</string>
    <string name="g_hint_email">Email</string>
    <string name="g_hint_fname">First Name</string>
    <string name="g_hint_lname">Last Name</string>
    <string name="g_hint_postlisting_current_value">Current value</string>
    <string name="g_hint_choose_category">Choose Category</string>
    <string name="g_hint_current_location">My Loaction</string>
    <string name="g_hint_code">Code</string>
    <string name="g_msg_about">Gifteng is an invitation-only social community where Members can give and receive things they love for free.</string>
    <string name="g_msg_login_title_msg">- make the world a giving place -</string>
    <string name="g_msg_password_reset">Please enter your email address so we can lookup your account</string>
    <string name="g_msg_password_reset_validation">At least 6 characters with letters and numbers</string>
    <string name="g_msg_terms">By joining , you agree to our Terms of Use and Privacy policy.</string>
    <string name="g_msg_inv_req_success">Thank you for your request, we will contact you soon!</string>
    <string name="g_msg_congrats">Congratulation!</string>
    <string name="g_msg_select_source">Please select source of information.</string>
    <string name="g_msg_pwd_not_match">does not match</string>
    <string name="g_msg_change_pwd_success">Password changed successfully.</string>
    <string name="g_msg_listing_update_terms_conditions">If you edit this gift you agree that we need to approve it again before it goes back live.</string>
    <string name="g_msg_validation_price">Please enter valid price value e.g. $10.</string>
    <string name="g_msg_follow_success">User added to following list.</string>
    <string name="g_msg_unfollow_success">User removed from following list.</string>
    <string name="g_msg_mark_spam_conf">Are you sure you want to mark it as spam?</string>
    <string name="g_msg_unmark_spam_conf">Are you sure you want to revoke spam mark?</string>
    <string name="g_msg_mark_spam_success">Listing marked as spam.</string>
    <string name="g_msg_unmark_spam_success">Spam marked removed successfully.</string>
    <string name="g_msg_request_ad_success">Gift request placed successfully.</string>
    <string name="g_msg_cancel_request_ad_success">Gift request cancelled.</string>
    <string name="g_msg_request_placed_already">You have already placed request for this gift.</string>
    <string name="g_msg_reset_pwd_success">Password changed successfully.</string>
    <string name="g_msg_already_in_bookmark">Gift already in favourites.</string>
	<string name="g_msg_msrk_received_success">Gift maked as received.</string>
	<string name="g_msg_no_data_for_members">No receivings from members.</string>
	<string name="g_msg_no_data_for_business">No receivings from businesses.</string>
    <string name="g_error_invtation_code">Sorry, your Invitation Code is not correct</string>
    <string name="g_error_req_invtation_code">Faild to request invitation. Please try again later.</string>
    <string name="g_error_change_pwd">Unable to change password. Please try again later.</string>
    <string name="g_error_invalid_old_pwd">Unable to change password. Old Password is not valid.</string>
    <string name="g_error">Unable to process request. Please try again later.</string>
    <string name="g_error_ad_no_more_available">Requested gift no more available.</string>
    <string name="g_error_reset_pwd_invalid_code">Reset password failed. Invalid code.</string>
    <string name="g_error_reset_pwd_code_expired">Reset password failed. Code expired.</string>
    <string name="g_error_reset_pwd_used_code">Reset password failed. Code already used.</string>
    <string name="label_zip">Zip Code</string>
    <string name="label_county">County</string>
    <string name="label_city">City</string>
    <string name="label_area">Area</string>
    <string name="label_state">State</string>
    <string name="label_address">Address</string>
    <string name="label_postlisting_title">Enter details below</string>
    <string name="label_postlisting_listing_title">Title</string>
    <string name="label_postlisting_subtitle">Subtitle</string>
    <string name="label_postlisting_category">Category</string>
    <string name="label_postlisting_sel_category">Select a category</string>
    <string name="label_postlisting_photos">Photos</string>
    <string name="label_postlisting_description">Description</string>
    <string name="label_postlisting_condition">Condition</string>
    <string name="label_postlisting_price">Price</string>
    <string name="label_postlisting_add_photos">Add photos</string>
    <string name="label_postlisting_latitude">Latitude</string>
    <string name="label_postlisting_longitude">Longitude</string>
    <string name="label_postlisting_expireson">Expiray</string>
    <string name="label_postlisting_post">Post</string>
    <string name="msg_postlisting_locate">Locate on map</string>
    <string name="pref_notify_title">Notify me by email when...</string>
    <string name="pref_notify_description">* Please note that despite your notification preferences, you will still receive emails for giving and receiving actions. These emails are required by Gifteng so that you have an accurate record of the transaction history.</string>
    <string name="pref_title_requested_gift">A Gift requested </string>
    <string name="pref_desc_requested_gift">Someone requested my Gift</string>
    <string name="pref_key_requested_gift">requested_my_gift</string>
    <string name="pref_title_i_need_to_review">Review</string>
    <string name="pref_desc_i_need_to_review">I need to leave a review</string>
    <string name="pref_key_i_need_to_review">need_to_leave_a_review</string>
    <string name="pref_title_following_posted">Post from favourite user</string>
    <string name="pref_desc_following_posted">A member I follow posted a new gift</string>
    <string name="pref_key_following_posted">member_i_follow_posted_a_new_gift</string>
    <string name="pref_title_earned_points">Points</string>
    <string name="pref_desc_earned_points">I earned point for activites</string>
    <string name="pref_key_earned_points">earned_point_for_activites</string>
    <string name="pref_title_received_review">Got reviews / points</string>
    <string name="pref_desc_received_review">I received reviews / got points</string>
    <string name="pref_key_received_review">received_reviews_got_points</string>
	<string name="pref_title_new_gift_available">New gifts</string>
    <string name="pref_desc_new_gift_available">New gifts are available</string>
    <string name="pref_key_new_gift_available">new_gifts_are_available</string>
    <string name="pref_title_someone_follow_me">Someone followed me</string>
    <string name="pref_desc_someone_follow_me">Someone followed me</string>
    <string name="pref_key_someone_follow_me">someone_followed_me</string>
    <string name="pref_title_someone_comment_my_gift">Received comments</string>
    <string name="pref_desc_someone_comment_my_gift">Someone commented on my Gift</string>
    <string name="pref_key_someone_comment_my_gift">someone_commented_on_my_gift</string>
    <string name="pref_title_someone_sent_me_pvt_msg">Private Message</string>
    <string name="pref_desc_someone_sent_me_pvt_msg">Someone sent me a private message</string>
    <string name="pref_key_someone_sent_me_pvt_msg">someone_sent_me_a_private_message</string>
    <string name="pref_filter_title">Filter Settings</string>
    <string name="pref_key_use_miles">pref_key_use_mile</string>
    <string name="pref_use_miles_title">Distance</string>
    <string name="pref_use_miles_summ">Set distance in miles</string>
    <string name="pref_category_title">Category</string>
    <string name="pref_key_use_current_location">pref_key_use_current_location</string>
    <string name="pref_use_current_location_title">Use current location</string>
    <string name="pref_use_current_location_summ">Select to use current location to filter results.</string>
    <string name="pref_key_sort_by">pref_key_sort_by</string>
    <string name="pref_sort_by_title">Sort By</string>
    <string name="pref_sort_by_summ">Select sort preference.</string>
    <string name="pref_sort_by_default">1</string>
    <string name="google_map_api_key">0ElieL9os3erYMNcR9jThm1lsWL7xw-RD0IbkGQ</string>
</resources>