<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <PreferenceCategory
        android:key="pref_key_notify"
        android:title="@string/pref_notify_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_requested_gift"
            android:title="@string/pref_title_requested_gift" 
            android:summary="@string/pref_desc_requested_gift"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_i_need_to_review"
            android:title="@string/pref_title_i_need_to_review" 
            android:summary="@string/pref_desc_i_need_to_review"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_following_posted"
            android:title="@string/pref_title_following_posted" 
            android:summary="@string/pref_desc_following_posted"/>
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_earned_points"
            android:title="@string/pref_title_earned_points"
            android:summary="@string/pref_desc_earned_points" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_received_review"
            android:title="@string/pref_title_received_review" 
            android:summary="@string/pref_desc_received_review"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_new_gift_available"
            android:title="@string/pref_title_new_gift_available"
            android:summary="@string/pref_desc_new_gift_available" />
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_someone_follow_me"
            android:title="@string/pref_title_someone_follow_me"
            android:summary="@string/pref_desc_someone_follow_me" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_someone_comment_my_gift"
            android:title="@string/pref_title_someone_comment_my_gift" 
            android:summary="@string/pref_desc_someone_comment_my_gift"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_someone_sent_me_pvt_msg"
            android:title="@string/pref_title_someone_sent_me_pvt_msg"
            android:summary="@string/pref_desc_someone_sent_me_pvt_msg" />
        <Preference 
            android:summary="@string/pref_notify_description"/>
    </PreferenceCategory>

    <!-- Connect -->
    <!--
    <PreferenceCategory
        android:key="pref_key_connect"
        android:title="@string/pref_connect"
        android:summary="@string/pref_connect_summ" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_facebook"
            android:summary="@string/pref_connect_summ"
            android:title="@string/pref_connect_facebook" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_twitter"
            android:summary="@string/pref_connect_summ"
            android:title="@string/pref_connect_twitter" />
    </PreferenceCategory>
    -->


    <!-- Notifications -->
    <!--
    <PreferenceCategory
        android:key="pref_key_notifications"
        android:title="@string/pref_notifications" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_notification_listing"
            android:title="@string/pref_notifications_listing" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_notification_messages"
            android:title="@string/pref_notifications_messages" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_notification_feedback"
            android:title="@string/pref_notifications_feedback" />
    </PreferenceCategory>
    -->


    <!-- Privacy Settings -->
    <!--
    <PreferenceCategory
        android:key="pref_key_privacy_settings"
        android:title="@string/pref_privacy_settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_privacy_settings_email_alerts"
            android:title="@string/pref_privacy_settings_email_alerts" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_privacy_settings_text_alerts"
            android:title="@string/pref_privacy_settings_text_alerts" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_privacy_settings_stay_logged_in"
            android:title="@string/pref_privacy_settings_stay_logged_in" />
    </PreferenceCategory>
    -->

</PreferenceScreen>