<?xml version="1.0" encoding="utf-8"?>
<!-- view to confirm invitation request before sending -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp" >

    <EditText
        android:id="@+id/edtActInvitationZipCode"
        style="?EditTextGrayBorder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:hint="@string/g_hint_zip"
        android:inputType="number"
        android:maxLength="6"
        android:paddingLeft="15dp"
        android:paddingRight="5dp" />

    <Spinner
        android:id="@+id/spinActInvitationKnowUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtActInvitationZipCode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:entries="@array/g_array_purpose_of_registration"
        android:paddingLeft="15dp"
        android:paddingRight="5dp" />

    <TextView
        android:id="@+id/txtActInvitationUseGiftingFor"
        style="?TextViewGrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinActInvitationKnowUs"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/g_label_use_gifteng_for" />

    <RadioGroup
        android:id="@+id/radioGroupActInvitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtActInvitationUseGiftingFor"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioActInvitationGiving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/g_label_giving" />

        <RadioButton
            android:id="@+id/radioActInvitationReceiving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_label_receiving" />
    </RadioGroup>

    <Button
        android:id="@+id/btnActLoginConfirmReq"
        style="?ButtonRoundCorner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/radioGroupActInvitation"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/g_label_confirm_req" />

</RelativeLayout>