<?xml version="1.0" encoding="utf-8"?>
<!-- layout to lookup account for password reset request using email/phone # -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp" >

    <TextView
        android:id="@+id/txtActLoginPasswordResetMsg"
        style="?TextViewGrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/g_msg_password_reset" />

    <EditText
        android:id="@+id/edtActLoginResetPwdEmail"
        style="?EditTextGrayBorder" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtActLoginPasswordResetMsg"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="5dp"
        android:hint="@string/g_hint_enter_email_phone" />

    <Button
        android:id="@+id/btnActLoginContinue"
        style="?ButtonRoundCorner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_below="@id/edtActLoginResetPwdEmail"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/g_label_continue" />

</RelativeLayout>